--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@discordjs/rest": "^0.1.0-canary.0",
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
+    "dayjs": "^1.11.7",
     "dayjs-with-plugins": "^1.0.3",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.9.2",
