--- a/package.json
+++ b/package.json
@@ -1,39 +1,34 @@
 {
-  "dependencies": {
-    "@discordjs/builders": "^0.9.0",
-    "@discordjs/rest": "^0.1.0-canary.0",
-    "axios": "^1.3.4",
-    "cheerio": "^1.0.0-rc.12",
-    "dayjs": "^1.11.7",
-    "dayjs-with-plugins": "^1.0.3",
-    "discord-api-types": "^0.22.0",
-    "discord.js": "^13.9.2",
-    "dotenv": "^10.0.0",
-    "eslint": "^7.32.0"
-  },
-  "name": "BilbyBot",
-  "description": "### A fully customizable starter code for Discord.js V13",
+  "name": "Bot-Bilby-new",
   "version": "1.0.0",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jalenluorion/Bot-Bilby-1.git"
+  },
+  "author": "jalenluorion <<>",
+  "license": "MIT",
+  "description": "### Node JS Version of Bot Bilby",
+  "bugs": {
+    "url": "https://github.com/jalenluorion/Bot-Bilby-1/issues"
+  },
+  "homepage": "https://github.com/jalenluorion/Bot-Bilby-1#readme",
+  "dependencies": {
+    "@discordjs/builders": "^1.2.0",
+    "@discordjs/rest": "^0.3.0",
+    "axios": "^0.26.1",
+    "cheerio": "^1.0.0-rc.10",
+    "dayjs": "^1.11.0",
+    "dayjs-with-plugins": "0.0.4",
+    "discord-api-types": "^0.31.1",
+    "discord.js": "^14.3.0"
+  },
+  "devDependencies": {
+    "node": "^16.14.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kb24x7/discordjs-v13-starter.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kb24x7/discordjs-v13-starter/issues"
-  },
-  "homepage": "https://github.com/kb24x7/discordjs-v13-starter#readme",
-  "devDependencies": {
-    "node": "^16.13.1"
-  },
-  "engines": {
-    "node": "^16.13.1"
-  }
+  "keywords": []
 }
