--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dayjs": "^1.11.0",
     "dayjs-with-plugins": "0.0.4",
     "discord-api-types": "^0.31.1",
-    "discord.js": "^14.3.0"
+    "discord.js": "^14.3.0",
+    "mongodb": "^5.3.0"
   },
   "devDependencies": {
     "node": "^16.14.2"
