--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "discord-api-types": "^0.31.1",
     "discord.js": "^14.3.0",
     "libsodium-wrappers": "^0.7.11",
-    "mongodb": "^5.3.0"
+    "mongodb": "^5.3.0",
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
     "node": "^16.14.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": []
 }
