--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dayjs-with-plugins": "0.0.4",
     "discord-api-types": "^0.31.1",
     "discord.js": "^14.3.0",
+    "ffmpeg-static": "^5.1.0",
     "libsodium-wrappers": "^0.7.11",
     "mongodb": "^5.3.0",
     "nodemon": "^3.0.1"
