--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ffmpeg-static": "^5.1.0",
     "libsodium-wrappers": "^0.7.11",
     "mongodb": "^5.3.0",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
