--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@discordjs/rest": "^0.3.0",
     "@discordjs/voice": "^0.16.0",
     "axios": "^0.26.1",
+    "canvas": "^2.11.2",
     "cheerio": "^1.0.0-rc.10",
     "dayjs": "^1.11.0",
     "dayjs-with-plugins": "0.0.4",
