--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^20.12.12",
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
+    "mongodb": "^6.6.2",
     "typescript": "^5.4.5"
   }
 }
