--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Bot Bilby is a Discord Bot for The Heeler House Discord server, providing moderation tools, gambling, and more!",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc",
+    "bot": "node dist/index.js"
   },
   "repository": {
     "type": "git",
