--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/The-Heeler-House/bot=bilby#readme",
   "dependencies": {
     "@types/node": "^20.12.12",
+    "canvas": "^2.11.2",
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
     "mongodb": "^6.6.2",
