--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "homepage": "https://github.com/The-Heeler-House/bot=bilby#readme",
   "dependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "canvas": "^2.11.2",
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "mongodb": "^6.6.2",
     "typescript": "^5.4.5"
   }
