--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "outDir": "./dist",
         "rootDir": "./src",
         "skipLibCheck": true,
-        "removeComments": true
+        "removeComments": true,
+        "resolveJsonModule": true
     },
     "exclude": [
         "node_modules"
