--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -17,7 +17,7 @@ jobs:
                 key: ${{secrets.SSH_KEY}} # Private or public key of the server
                 username: ${{ secrets.SSH_USERNAME }} # User of the server you want to ssh into
                 script: |
-                    cd /bot-bilby
+                    cd bot-bilby/
                     pm2 delete all
                     git pull origin main --force
                     npm install
