--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,10 +1,8 @@
 name: Build and Deploy to DigitalOcean
 
-# on:
-#   push:
-#     branches: [ "main" ]
-
-on: [push]
+on:
+  push:
+    branches: [ "main" ]
 
 jobs:
     deploy:
