some random change

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "Powerups",
         "recognise",
         "Sheeeesh",
+        "Singleplayer",
         "uppy",
         "Whackadoo"
     ]
