--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "BLUEYPEDIA",
         "Dolphinman",
         "freespace",
+        "highscore",
         "keepy",
         "Leaderboard",
         "lmao",
