--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.19.2",
     "fast-average-color-node": "^3.0.0",
     "mongodb": "^6.6.2",
+    "mqtt": "^5.7.0",
     "node-fetch": "^2.7.0",
     "typescript": "^5.4.5",
     "webp-converter": "^2.3.3"
