--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fast-average-color-node": "^3.0.0",
+    "minio": "^8.0.0",
     "mongodb": "^6.6.2",
+    "mqtt": "^5.7.0",
     "typescript": "^5.4.5"
   }
 }
