--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "bilby",
         "Bizard",
         "BLUEYPEDIA",
+        "cooldown",
         "Dolphinman",
         "freespace",
         "highscore",
