--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fast-average-color-node": "^3.0.0",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.6.2",
     "typescript": "^5.4.5"
   }
