--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "Dolphinman",
         "freespace",
         "highscore",
+        "Jalen",
         "keepy",
         "Leaderboard",
         "lmao",
@@ -14,6 +15,7 @@
         "muteme",
         "Muteroulette",
         "Nooob",
+        "notif",
         "powerup",
         "Powerups",
         "recognise",
