--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "fast-average-color-node": "^3.0.0",
+    "jimp": "^1.6.0",
     "minio": "^8.0.1",
     "moment-timezone": "^0.5.45",
     "mongodb": "^6.6.2",
+    "tesseract.js": "^5.1.1",
     "typescript": "^5.4.5"
   }
 }
