--- a/package.json
+++ b/package.json
@@ -21,12 +21,21 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "chart.js": "^4.4.8",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-adapter-dayjs-4": "^1.0.4",
+    "chartjs-adapter-moment": "^1.0.1",
+    "chartjs-node-canvas": "^5.0.0",
     "cheerio": "^1.0.0-rc.12",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "fast-average-color-node": "^3.0.0",
+    "gaussian": "^1.3.0",
     "minio": "^8.0.1",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "mongodb": "^6.6.2",
     "sharp": "^0.33.5",
