--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "cheerio": "^1.0.0-rc.12",
+    "denque": "^2.1.0",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
