--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "cheerio": "^1.0.0-rc.12",
+    "config": "^4.1.1",
     "denque": "^2.1.0",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.5",
@@ -32,5 +33,8 @@
     "mongodb": "^6.6.2",
     "sharp": "^0.33.5",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/config": "^3.3.5"
   }
 }
